--- a/SoundRecord/app/src/main/res/values/colors.xml
+++ b/SoundRecord/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#238cd2</color>
+    <color name="colorPrimaryDark">#03398f</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="title_color">#ffffff</color>
 </resources>
