--- a/SoundRecord/app/src/main/res/layout/content_my_tests.xml
+++ b/SoundRecord/app/src/main/res/layout/content_my_tests.xml
@@ -5,25 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#abcdef"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MyTests"
     tools:showIn="@layout/activity_my_tests">
 
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="77dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="41dp"
-        android:contentDescription="logo"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
 
     <TableLayout
         android:id="@+id/tableLayout"
@@ -35,16 +19,18 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:background="@android:color/background_light">
+        android:background="@android:color/background_light">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:background="@android:color/holo_blue_bright">
+            android:visibility="visible"
+            android:background="@android:color/holo_blue_bright">
 
             <TextView
                 android:id="@+id/textView1"
@@ -94,7 +80,8 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textView5"
@@ -118,7 +105,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="78dp"
                 android:layout_height="wrap_content"
-                android:text="Fotball"
+                android:text="Football"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textSize="20sp"
@@ -140,7 +127,8 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textView9"
@@ -164,7 +152,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="78dp"
                 android:layout_height="wrap_content"
-                android:text="Fotball"
+                android:text="Football"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textSize="20sp"
@@ -186,13 +174,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="16/0818"
+                android:text="16/08/18"
                 android:textAlignment="center"
                 android:textSize="20sp" />
 
