--- a/SoundRecord/app/src/main/res/values/colors.xml
+++ b/SoundRecord/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#238cd2</color>
     <color name="colorPrimaryDark">#03398f</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#000000</color>
     <color name="title_color">#ffffff</color>
 </resources>
