--- a/SoundRecord/app/src/main/res/layout/content_home.xml
+++ b/SoundRecord/app/src/main/res/layout/content_home.xml
@@ -64,7 +64,7 @@
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/hockeyBtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/date2" />
 
     <Button
         android:id="@+id/hockeyBtn"
@@ -82,10 +82,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/footballBtn"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/date2" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/date2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
