--- a/SoundRecord/app/src/main/res/layout/content_trials.xml
+++ b/SoundRecord/app/src/main/res/layout/content_trials.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#abcdef"
-    tools:context=".MyTests"
-    tools:showIn="@layout/activity_my_tests">
-
+    tools:context=".Trials"
+    tools:showIn="@layout/activity_trials">
 
     <TableLayout
         android:id="@+id/tableLayout"
@@ -19,24 +18,24 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:color/background_light"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@android:color/background_light">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            android:background="@android:color/holo_blue_bright">
+            android:background="@android:color/holo_blue_bright"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="105dp"
+                android:layout_width="184dp"
                 android:layout_height="wrap_content"
-                android:text="Date"
+                android:text="Trial"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="30sp"
@@ -44,30 +43,8 @@
                 tools:layout_editor_absoluteY="16dp" />
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:text="Place"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="30sp"
-                tools:layout_editor_absoluteX="103dp"
-                tools:layout_editor_absoluteY="15dp" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Type"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="30sp"
-                tools:layout_editor_absoluteX="199dp"
-                tools:layout_editor_absoluteY="14dp" />
-
-            <TextView
                 android:id="@+id/textView4"
-                android:layout_width="95dp"
+                android:layout_width="204dp"
                 android:layout_height="match_parent"
                 android:text="Result"
                 android:textAlignment="center"
@@ -84,33 +61,12 @@
             android:visibility="visible">
 
             <TextView
-                android:id="@+id/date1"
+                android:id="@+id/t1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20/05/18"
+                android:text="1."
                 android:textAlignment="center"
                 android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="65dp"
-                android:layout_height="wrap_content"
-                android:text="Glasgow"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                tools:layout_editor_absoluteX="103dp"
-                tools:layout_editor_absoluteY="15dp" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="78dp"
-                android:layout_height="wrap_content"
-                android:text="Football"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="20sp"
-                tools:layout_editor_absoluteX="199dp"
-                tools:layout_editor_absoluteY="14dp" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -131,39 +87,17 @@
             android:visibility="visible">
 
             <TextView
-                android:id="@+id/date2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10/06/18"
+                android:text="2."
                 android:textAlignment="center"
                 android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="65dp"
-                android:layout_height="match_parent"
-                android:text="Edinburgh"
-                android:textAlignment="center"
-                android:textSize="19dp"
-                tools:layout_editor_absoluteX="103dp"
-                tools:layout_editor_absoluteY="15dp" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="78dp"
-                android:layout_height="wrap_content"
-                android:text="Football"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="20sp"
-                tools:layout_editor_absoluteX="199dp"
-                tools:layout_editor_absoluteY="14dp" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="70%"
+                android:text="50%"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_green_dark"
                 android:textSize="20sp"
@@ -181,33 +115,12 @@
                 android:id="@+id/date3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="16/08/18"
+                android:text="3."
                 android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/textView14"
-                android:layout_width="65dp"
-                android:layout_height="wrap_content"
-                android:text="Glasgow"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                tools:layout_editor_absoluteX="103dp"
-                tools:layout_editor_absoluteY="15dp" />
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="78dp"
-                android:layout_height="wrap_content"
-                android:text="Rugby"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="20sp"
-                tools:layout_editor_absoluteX="199dp"
-                tools:layout_editor_absoluteY="14dp" />
-
-            <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="30%"
@@ -219,14 +132,80 @@
 
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4."
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="35%"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="20sp"
+                tools:layout_editor_absoluteX="284dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5."
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20%"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="20sp"
+                tools:layout_editor_absoluteX="284dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="6."
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="40%"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="20sp"
+                tools:layout_editor_absoluteX="284dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+        </TableRow>
+
     </TableLayout>
-
-    <Button
-        android:id="@+id/btnPDF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="create PDF"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="446dp" />
-
 </android.support.constraint.ConstraintLayout>
