--- a/SoundRecord/app/src/main/res/values/colors.xml
+++ b/SoundRecord/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#03398f</color>
     <color name="colorAccent">#000000</color>
     <color name="title_color">#ffffff</color>
+    <color name="AVG_color">#fff52d</color>
 </resources>
