--- a/SoundRecord/app/src/main/res/menu/main_menu.xml
+++ b/SoundRecord/app/src/main/res/menu/main_menu.xml
@@ -20,4 +20,8 @@
         android:title="@string/title_activity_results"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/formPDF"
+        android:title="@string/title_activity_form_pdf"
+        app:showAsAction="never"/>
+
 </menu>
