--- a/SoundRecord/app/src/main/res/layout/activity_processing.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_processing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#abcdef"
-    tools:context=".Processing">
+    tools:context=".ProcessingActivity">
 
     <TextView
         android:id="@+id/textView"
