--- a/SoundRecord/app/src/main/res/layout/content_home.xml
+++ b/SoundRecord/app/src/main/res/layout/content_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#abcdef"
-    tools:context=".HomeActivity"
+    tools:context=".Home"
     tools:showIn="@layout/activity_home">
 
     <Button
