Redid changes for #65 as other branch was behind and wouldn't merge

--- a/SoundRecord/app/src/main/res/layout/activity_results.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_results.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Results">
+    tools:context=".ResultsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-    </android.support.design.widget.AppBarLayout>
+        android:theme="@style/AppTheme"
+        app:expanded="true" />
 
     <include layout="@layout/content_results" />
 
