--- a/SoundRecord/app/src/main/res/layout/content_form_pdf.xml
+++ b/SoundRecord/app/src/main/res/layout/content_form_pdf.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".FormPDF"
+    tools:context=".FormPDFActivity"
     tools:showIn="@layout/activity_form_pdf">
 
     <android.support.design.widget.TextInputLayout
