--- a/SoundRecord/app/src/main/res/layout/content_results.xml
+++ b/SoundRecord/app/src/main/res/layout/content_results.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="46dp"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="@string/loc1"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -55,7 +55,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="46dp"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:text="@string/loc2"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -65,7 +65,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="46dp"
                 android:layout_height="wrap_content"
-                android:text="3"
+                android:text="@string/loc3"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -75,7 +75,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="46dp"
                 android:layout_height="match_parent"
-                android:text="4"
+                android:text="@string/loc4"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -85,7 +85,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="46dp"
                 android:layout_height="match_parent"
-                android:text="5"
+                android:text="@string/loc5"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -95,7 +95,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="46dp"
                 android:layout_height="wrap_content"
-                android:text="6"
+                android:text="@string/loc6"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -501,7 +501,7 @@
                 android:id="@+id/textView49"
                 android:layout_width="46dp"
                 android:layout_height="wrap_content"
-                android:text="Average"
+                android:text="@string/avg"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -587,15 +587,14 @@
         android:id="@+id/btnPDF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginRight="136dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginRight="160dp"
         android:background="@android:color/holo_blue_light"
+        android:text="@string/createPDF"
         android:textColor="@android:color/white"
-        android:text="Create PDF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btnCSV"
         app:layout_constraintTop_toTopOf="@+id/tableLayout" />
 
 </android.support.constraint.ConstraintLayout>
