Working through bluetooth docs

--- a/SoundRecord/app/src/main/res/menu/main_menu.xml
+++ b/SoundRecord/app/src/main/res/menu/main_menu.xml
@@ -24,4 +24,8 @@
         android:title="@string/title_activity_form_pdf"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/bluetooth"
+        android:title="Bluetooth"
+        app:showAsAction="never"/>
+
 </menu>
