--- a/SoundRecord/app/src/main/res/layout/content_final.xml
+++ b/SoundRecord/app/src/main/res/layout/content_final.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#abcdef"
-    tools:context=".ResultsActivity"
-    tools:showIn="@layout/activity_results">
+    tools:context=".FinalActivity"
+    tools:showIn="@layout/activity_final">
 
 
     <TableLayout
